align issue and changed new to now

--- a/home.css
+++ b/home.css
@@ -71,7 +71,6 @@ body{
     .soro-soke-div-mobile{
       display: flex;
       justify-content: center;
-      align-items: center;
       flex-direction: column;
       height: 100%;
       width: 100%;
